// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImagePreviewButton /> rendering Default rendering matches snapshot 1`] = `
<DocumentFragment>
  .c0 {
  background: transparent;
  border: none;
  cursor: pointer;
}

.c1 {
  background: #EEEEEE;
  background-size: cover;
  background-position: center;
  position: relative;
  border-radius: 50%;
  height: 96px;
  width: 96px;
  overflow: hidden;
}

.c2 {
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 20px;
  height: 20px;
}

<button
    aria-label="Update image"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <img
          alt="camera icon"
          class="c3"
          src="[object Object]"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`<ImagePreviewButton /> rendering renders correctly when img is provided 1`] = `
<DocumentFragment>
  .c0 {
  background: transparent;
  border: none;
  cursor: pointer;
}

.c1 {
  background: url(./anyImagePath.jpg);
  background-size: cover;
  background-position: center;
  position: relative;
  border-radius: 50%;
  height: 96px;
  width: 96px;
  overflow: hidden;
}

.c2 {
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgba(0,0,0,0.3);
}

.c3 {
  width: 20px;
  height: 20px;
}

<button
    aria-label="Update image"
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <img
          alt="camera icon"
          class="c3"
          src="[object Object]"
        />
      </div>
    </div>
  </button>
</DocumentFragment>
`;
